      code value like \xf2) (fixes bug #24)
    - returns verbose syntax errors (line and column where syntax error
      occured, the unexpected character and the actually expected, possible
      character(s), the latter only if less than 5 possibilities)
    - made sure that LSCP syntax is not affected by gigedit locale
      settings

  * Bug fixes:
    - fixed crash occurring on certain LSCP scripts (Bug 39)
    - another thread safety fix for lscp "load engine" and "set
      channel audio output device"
    - fixed a crash which occurs when reassigning the same engine
      on a sampler channel with connected MIDI device
    - fixed a crash which occurs when changing the number of ports of a MIDI
      device connected to a sampler channel to number less then or equal
      to the index of the port to which the sampler channel is connected.
    - The previous bindings were not been disconnected when altering
      the ALSA_SEQ_BINDINGS parameter. Introduced a NONE keyword for
      unsubscribing from all bindings (e.g. ALSA_SEQ_BINDINGS=NONE).
    - The active stream/voice count statistic was incorrect.
    - notification events were not been sent for some sampler
      channel changes
    - added default min and max values to restrict the number of allowed
      audio output channels and MIDI input ports
    - the connection to the PCM interface is now closed when destroying
      an audio output device
    - files with slash in their path or filename could not be loaded

  * test cases:
    - updated and fixed (haven't been touched in a while)

Version 0.4.0 (24 November 2006)

  * packaging changes:
    - changed deprecated copyright attribute to license; added ldconfig
      to post-(un)install steps; added devel package for liblinuxsampler;
      to linuxsampler.spec (RPM)
    - install necessary development header files for allowing 3rd party
      applications to link against liblinuxsampler